# chainsight-management-canisters

./: .gitignore  Cargo.toml  Makefile  README.md  build.js.tmp  canister_ids.json  dfx.json  package-set.dhall  vessel.dhall
.github/workflows/: qa.yml
artifacts/: Makefile  Registry.wasm  dfx.json  registry.did
scripts/: test-initializer.sh  test.sh
src/call_dest/: call_dest.did
src/call_dest/src/: lib.rs
src/call_source/src/: lib.rs
src/canisters/call_dest/: Cargo.toml
src/canisters/call_source/: Cargo.toml  call_source.did
src/canisters/common/: Cargo.toml
src/canisters/initializer/: Cargo.toml  initializer.did
src/canisters/initializer/src/: lib.rs  types.rs
src/canisters/proxy/: Cargo.toml  proxy.did
src/canisters/proxy/src/: lib.rs
src/canisters/registry/: Registry.mo
src/canisters/registry/canister/: Canister.mo  CanisterRepository.mo
src/canisters/registry/configs/: Config.mo  ConfigRepository.mo
src/canisters/registry/db/: DB.mo  TimeStampedSK.mo
src/canisters/registry/log/: LogRepository.mo
src/canisters/rpc/: Cargo.toml
src/canisters/rpc/src/: call_provider.rs  lib.rs
src/canisters/vault/: Cargo.toml  vault.did
src/canisters/vault/src/: lib.rs  types.rs
src/canisters/vault/src/types/: types.rs
src/common/: Cargo.toml
src/common/src/: types.rs
src/deployment/: Cargo.toml
src/deployment/src/: client.rs  lib.rs
src/initializer/: Cargo.toml  initializer.did
src/initializer/src/: lib.rs
src/message/: Cargo.toml
src/proxy/: Cargo.toml  proxy.did
src/proxy/src/: lib.rs
src/registry/: Canister.mo  CanisterRepository.mo  IndexRegistry.mo  IndexService.mo  Log.mo  LogRepository.mo  Registry.mo  TimeStampedSK.mo  Types.mo
src/registry/canister/: CanisterRepository.mo
src/registry/db/: DB.mo
src/registry/log/: Log.mo  LogRepository.mo
src/registry_old/: Cargo.toml
src/registry_old/src/: lib.rs  types.rs
src/rpc/: Cargo.toml
src/rpc/src/: caller.rs  lib.rs  message.rs
src/vault/: Cargo.toml  vault.did
src/vault/src/: lib.rs
src/vault/src/types/: types.rs
test/: TimeStampedSKTest.mo
test/utils/: ActorSpec.mo
(+2 files in other folders)
