[workspace]
members = [
    "src/canisters/proxy",
    "src/canisters/call_source",
    "src/canisters/call_dest",
    "src/canisters/vault",
    "src/canisters/initializer",
]

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-timers = "0.5.0" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.4"
serde = "1.0.164"
