[package]
name = "management-canisters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
candid = "0.8"
dirs = "5.0.1"
garcon = "0.2.3"
ic-agent = "0.24.1"
serde = "1.0.164"
serde_bytes = "0.11.10"
strum_macros = "0.25.1"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
