[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true

async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
